import java.io.IOException;
import java.util.ArrayList;

public class Main {

  public static void main(String[] args) throws IOException, InterruptedException {

    PageMapper pageMapper = new PageMapper();
    pageMapper.extract("");

  }
}
