@startuml

title __CRAWLER-JAVA's Class Diagram__\n

  namespace  {
    class Doodle {
    }
  }
  

  namespace  {
    class Doodle2 {
    }
  }
  

  namespace  {
    namespace obDescription {
      class JobDescription.Address {
      }
    }
  }
  

  namespace  {
    namespace obDescription {
      class JobDescription.HiringOrganization {
      }
    }
  }
  

  namespace  {
    namespace obDescription {
      class JobDescription.JobDescription {
      }
    }
  }
  

  namespace  {
    namespace obDescription {
      class JobDescription.JobLocation {
      }
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class PageMapper {
    }
  }
  

  JobDescription.JobDescription o-- JobDescription.HiringOrganization : hiringOrganization
  JobDescription.JobDescription o-- JobDescription.JobLocation : jobLocation
  JobDescription.JobLocation o-- JobDescription.Address : address


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
